# tempapp

./: .gitignore  Containerfile  Dockerfile  README.md  devserver.sh  flake.nix  pyproject.toml  requirements.txt  start_container.sh  x86
.github/workflows/: package.yml
app/: app.py  utils.py
scripts/: build_and_publish.sh  get_temps.py
src/tempapp/: __main__.py  _brand.yml  app.py  main.py  pipeline.py  types.py  utils.py
