[project]
name = "tempapp"
version = "0.1.0"
description = "Shiny application to visualize indoor temperatures"
authors = [
    { name = "stefur", email = "stefan@furne.net" }
]
dependencies = [
    "shiny>=0.8.1",
    "htmltools>=0.5.1",
    "shinyswatch>=0.4.2",
    "polars>=0.20.10",
    "shinywidgets>=0.3.0",
    "duckdb>=0.10.0",
    "plotly>=5.19.0",
    "pandas>=2.2.1",
    "pyarrow>=15.0.0",
    "faicons>=0.2.2",
    "matplotlib>=3.8.3",
    "requests>=2.31.0",
    "polars-xdt>=0.14.12",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye.scripts]
devserver = "uvicorn tempapp.app:app --host 0.0.0.0 --port 8000 --reload"
test-get-temps = "python -m tempapp get-temps"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-requests>=2.32.0.20240712",
    "ipykernel>=6.29.3",
    "types-pytz>=2024.1.0.20240203",
    "types-python-dateutil>=2.9.0.20240316",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tempapp"]
