[project]
name = "tempapp"
version = "0.1.0"
description = "Shiny application to visualize indoor temperatures"
authors = [
    { name = "stefur", email = "stefan@furne.net" }
]
dependencies = [
    "shiny>=0.8.1",
    "htmltools>=0.5.1",
    "polars>=0.20.10",
    "shinywidgets>=0.3.0",
    "duckdb>=0.10.0",
    "plotly>=5.19.0",
    "pandas>=2.2.1",
    "faicons>=0.2.2",
    "matplotlib>=3.8.3",
    "requests>=2.31.0",
    "polars-xdt>=0.14.12",
    "pyarrow>=17.0.0",
    "brand-yml>=0.1.1",
    "libsass>=0.23.0",
    "pydantic>=2.11.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tempapp = "tempapp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tempapp"]

[dependency-groups]
dev = [
    "types-python-dateutil>=2.9.0.20240906",
    "types-pytz>=2024.2.0.20240913",
    "types-requests>=2.32.0.20240914",
]
