[project]
name = "tempapp"
version = "0.1.0"
description = "Shiny application to visualize indoor temperatures"
authors = [
    { name = "stefur", email = "stefan@furne.net" }
]
dependencies = [
    "shiny>=0.8.1",
    "polars>=0.20.10",
    "faicons>=0.2.2",
    "requests>=2.31.0",
    "polars-xdt>=0.14.12",
    "brand-yml>=0.1.1",
    "libsass>=0.23.0",
    "pyecharts>=2.0.8",
    "coloraide>=4.7.1",
    "python-dateutil>=2.9.0.post0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
tempapp = "tempapp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tempapp"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "types-python-dateutil>=2.9.0.20240906",
    "types-pytz>=2024.2.0.20240913",
    "types-requests>=2.32.0.20240914",
]
